force-app/main/default/objects/E_Rate_All_Request__c/E_Rate_All_Request__c.object-meta.xml
<CustomObject>
    <label>E-Rate All Request</label>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>E-Rate CP Tracker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E-Rate All Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>