force-app/main/default/objects/E_Rate_All_Request__c/fields/Consistency_Across_Name__c.field-meta.xml
<CustomField>
    <fullName>Consistency_Across_Name__c</fullName>
    <label>Consistency Across Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>