force-app/main/default/objects/E_Rate_All_Request__c/fields/Counterparty_Name__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Name__c</fullName>
    <inlineHelpText>Counterparty Full Name</inlineHelpText>
    <label>Counterparty Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>