force-app/main/default/objects/E_Rate_All_Request__c/fields/COUNTERPARTY_NAME_in_SYSTEM__c.field-meta.xml
<CustomField>
    <fullName>COUNTERPARTY_NAME_in_SYSTEM__c</fullName>
    <formula>Counterparty_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COUNTERPARTY NAME in SYSTEM</label>
    <type>Text</type>
</CustomField>