force-app/main/default/objects/E_Rate_All_Request__c/fields/CreateDateMonthYear__c.field-meta.xml
<CustomField>
    <fullName>CreateDateMonthYear__c</fullName>
    <formula>TEXT(Year((Latest_Actioned_Date__c))) &amp; &quot;/&quot; &amp;
IF(
Month((Latest_Actioned_Date__c))&lt;10,
&quot;0&quot;&amp; TEXT(MONTH((Latest_Actioned_Date__c))),
TEXT(Month((Latest_Actioned_Date__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreateDateMonthYear</label>
    <type>Text</type>
</CustomField>