force-app/main/default/objects/E_Rate_All_Request__c/fields/Date_Actioned_DD_MM_YYYY__c.field-meta.xml
<CustomField>
    <fullName>Date_Actioned_DD_MM_YYYY__c</fullName>
    <label>Date Actioned DD_MM_YYYY</label>
    <type>Date</type>
</CustomField>