force-app/main/default/objects/E_Rate_All_Request__c/fields/Date_Actioned_Num__c.field-meta.xml
<CustomField>
    <fullName>Date_Actioned_Num__c</fullName>
    <formula>Value(

TEXT(Year((Date_Actioned_DD_MM_YYYY__c))) &amp;
IF(
Month((Date_Actioned_DD_MM_YYYY__c))&lt;10,
&quot;0&quot;&amp; TEXT(MONTH((Date_Actioned_DD_MM_YYYY__c))),
TEXT(Month((Date_Actioned_DD_MM_YYYY__c)))) &amp;
IF(
DAY((Date_Actioned_DD_MM_YYYY__c))&lt;10,
&quot;0&quot;&amp;TEXT(DAY((Date_Actioned_DD_MM_YYYY__c))),
TEXT(DAY((Date_Actioned_DD_MM_YYYY__c))))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Actioned Num</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>