force-app/main/default/objects/E_Rate_All_Request__c/fields/Date_Actioned_YYYY_MM_DD__c.field-meta.xml
<CustomField>
    <fullName>Date_Actioned_YYYY_MM_DD__c</fullName>
    <formula>TEXT(Year((Date_Actioned_DD_MM_YYYY__c))) &amp; &quot;/&quot; &amp;
IF(
Month((Date_Actioned_DD_MM_YYYY__c))&lt;10,
&quot;0&quot;&amp; TEXT(MONTH((Date_Actioned_DD_MM_YYYY__c))),
TEXT(Month((Date_Actioned_DD_MM_YYYY__c)))) &amp; &quot;/&quot; &amp;
IF(
DAY((Date_Actioned_DD_MM_YYYY__c))&lt;10,
&quot;0&quot;&amp;TEXT(DAY((Date_Actioned_DD_MM_YYYY__c))),
TEXT(DAY((Date_Actioned_DD_MM_YYYY__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Actioned YYYY/MM/DD</label>
    <type>Text</type>
</CustomField>