force-app/main/default/objects/E_Rate_All_Request__c/fields/Days_Due_Past_SLA__c.field-meta.xml
<CustomField>
    <fullName>Days_Due_Past_SLA__c</fullName>
    <formula>IF(ISPICKVAL(Request_Status__c,&quot;Completed&quot;),
(5*(FLOOR((Date_Actioned_DD_MM_YYYY__c-DATE(1900,1,8))/7))+MIN(5,MOD(Date_Actioned_DD_MM_YYYY__c-DATE(1900,1,8),7)))
-
(5*(FLOOR((SLA_Due_Date__c-DATE(1900,1,8))/7))+MIN(5,MOD(SLA_Due_Date__c-DATE(1900,1,8),7))),
IF(ISPICKVAL(Request_Status__c,&quot;In progress&quot;),
(5*(FLOOR((TODAY()-DATE(1900,1,8))/7))+MIN(5,MOD(TODAY()-DATE(1900,1,8),7)))
-
(5*(FLOOR((SLA_Due_Date__c-DATE(1900,1,8))/7))+MIN(5,MOD(SLA_Due_Date__c-DATE(1900,1,8),7))),
NULL))</formula>
    <label>Days Due / Past SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>