force-app/main/default/objects/E_Rate_All_Request__c/fields/Days_To_Action__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Action__c</fullName>
    <formula>Date_Actioned_DD_MM_YYYY__c - Date_Approved_DD_MM_YYYY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Action</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>