force-app/main/default/objects/E_Rate_All_Request__c/fields/E_Rate_COMPLETION_DATE__c.field-meta.xml
<CustomField>
    <fullName>E_Rate_COMPLETION_DATE__c</fullName>
    <formula>IF(E_RATED__c=&quot;Y&quot; &amp;&amp; NOT(ISBLANK(Latest_Actioned_Date__c)),TEXT(YEAR(Latest_Actioned_Date__c))&amp;&quot;/&quot;&amp;IF(MONTH(Latest_Actioned_Date__c)&lt;10,&quot;0&quot;&amp;TEXT(MONTH(Latest_Actioned_Date__c)),TEXT(MONTH(Latest_Actioned_Date__c)))&amp;&quot;/&quot;&amp;IF(DAY(Latest_Actioned_Date__c)&lt;10,&quot;0&quot;&amp;TEXT(DAY(Latest_Actioned_Date__c)),TEXT(DAY(Latest_Actioned_Date__c))),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-Rate COMPLETION DATE</label>
    <type>Text</type>
</CustomField>