force-app/main/default/objects/E_Rate_All_Request__c/fields/E_RATED__c.field-meta.xml
<CustomField>
    <fullName>E_RATED__c</fullName>
    <formula>IF((Latest_Actioned_Request_Type__c=&quot;E-Rate&quot; &amp;&amp; ISPICKVAL(Request_Type__c,&quot;E-rate&quot;) &amp;&amp; (ISPICKVAL(Request_Status__c,&quot;Completed&quot;) || ISPICKVAL(Request_Status__c,&quot;Previously Actioned&quot;))),&quot;Y&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-RATED?</label>
    <type>Text</type>
</CustomField>