force-app/main/default/objects/E_Rate_All_Request__c/fields/Entries_in_MDN_Request__c.field-meta.xml
<CustomField>
    <fullName>Entries_in_MDN_Request__c</fullName>
    <inlineHelpText>Number of Entries in the same MDN Request</inlineHelpText>
    <label>Entries in MDN Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>