force-app/main/default/objects/E_Rate_All_Request__c/fields/Index_No__c.field-meta.xml
<CustomField>
    <fullName>Index_No__c</fullName>
    <label>Index No</label>
    <type>AutoNumber</type>
</CustomField>