force-app/main/default/objects/E_Rate_All_Request__c/fields/Latest_Actioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Actioned_Date__c</fullName>
    <label>Latest Actioned Date</label>
    <type>Date</type>
</CustomField>