force-app/main/default/objects/E_Rate_All_Request__c/fields/Latest_Actioned_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Latest_Actioned_Request_Type__c</fullName>
    <label>Latest Actioned Request Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>