force-app/main/default/objects/E_Rate_All_Request__c/fields/Latest_Approved_Date_of_Actioned_Request__c.field-meta.xml
<CustomField>
    <fullName>Latest_Approved_Date_of_Actioned_Request__c</fullName>
    <label>Latest Approved Date of Actioned Request</label>
    <type>Date</type>
</CustomField>