force-app/main/default/objects/E_Rate_All_Request__c/fields/Latest_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Request_Status__c</fullName>
    <label>Latest Request Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>