force-app/main/default/objects/E_Rate_All_Request__c/fields/MDN_Request__c.field-meta.xml
<CustomField>
    <fullName>MDN_Request__c</fullName>
    <label>MDN Request</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>