force-app/main/default/objects/E_Rate_All_Request__c/fields/MDN_Requestor__c.field-meta.xml
<CustomField>
    <fullName>MDN_Requestor__c</fullName>
    <label>MDN Requestor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>