force-app/main/default/objects/E_Rate_All_Request__c/fields/MDN_Submitter__c.field-meta.xml
<CustomField>
    <fullName>MDN_Submitter__c</fullName>
    <label>MDN Submitter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>