force-app/main/default/objects/E_Rate_All_Request__c/fields/Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Reason_Type__c</fullName>
    <label>Reason Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNDB - Sanctions</fullName>
            </value>
            <value>
                <fullName>DNDB - HRCC</fullName>
            </value>
            <value>
                <fullName>STASCO Related Activity</fullName>
            </value>
            <value>
                <fullName>Non-STASCO Related Activity</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>