force-app/main/default/objects/E_Rate_All_Request__c/fields/Req_Status_Num_Complete__c.field-meta.xml
<CustomField>
    <fullName>Req_Status_Num_Complete__c</fullName>
    <formula>If (ISPICKVAL(Request_Status__c,&quot;Completed&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Req Status Num Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>