force-app/main/default/objects/E_Rate_All_Request__c/fields/Request_Complete__c.field-meta.xml
<CustomField>
    <fullName>Request_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Complete</label>
    <type>Checkbox</type>
</CustomField>