force-app/main/default/objects/E_Rate_All_Request__c/fields/Request_Info__c.field-meta.xml
<CustomField>
    <fullName>Request_Info__c</fullName>
    <formula>MDN_Request__c &amp; &quot;_&quot; &amp;  Counterparty_Name__c &amp; &quot;_&quot; &amp;  System_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Info</label>
    <type>Text</type>
</CustomField>