force-app/main/default/objects/E_Rate_All_Request__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <label>Request Reason</label>
    <length>765</length>
    <type>LongTextArea</type>
</CustomField>