force-app/main/default/objects/E_Rate_All_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Rate</fullName>
            </value>
            <value>
                <fullName>Lift E-Rate</fullName>
            </value>
            <value>
                <fullName>Deactivate</fullName>
            </value>
            <value>
                <fullName>Reactivate</fullName>
            </value>
            <value>
                <fullName>Deactivate to E-Rate</fullName>
                <isActive>false</isActive>
                <label>Deactivate to E-Rate</label>
            </value>
            <value>
                <fullName>E-Rate with Deactivate</fullName>
                <isActive>false</isActive>
                <label>E-Rate with Deactivate</label>
            </value>
            <value>
                <fullName>Lift E-Rate with Reactivate</fullName>
                <isActive>false</isActive>
                <label>Lift E-Rate with Reactivate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>