force-app/main/default/objects/E_Rate_All_Request__c/fields/SLA_Actioned_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Actioned_Date__c</fullName>
    <formula>SLA_Due_Date__c -  Date_Actioned_DD_MM_YYYY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA - Actioned Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>