force-app/main/default/objects/E_Rate_All_Request__c/fields/SLA_BUSINESS_DAYS__c.field-meta.xml
<CustomField>
    <fullName>SLA_BUSINESS_DAYS__c</fullName>
    <formula>IF(AND(Entries_in_MDN_Request__c &gt; 200, Urgent__c), CEILING(Entries_in_MDN_Request__c * 0.05),
IF(Entries_in_MDN_Request__c &gt; 200, CEILING(Entries_in_MDN_Request__c * 0.075),
IF(AND(Entries_in_MDN_Request__c &lt; 201, Entries_in_MDN_Request__c &gt; 10, Urgent__c), 10,
IF(AND(Entries_in_MDN_Request__c &lt; 201, Entries_in_MDN_Request__c &gt; 10), 15,
IF(AND(Entries_in_MDN_Request__c &lt; 11, Entries_in_MDN_Request__c &gt; 2), 4,
IF(AND(Entries_in_MDN_Request__c &gt; 0, ISPICKVAL(Reason_Type__c, &quot;DNDB - Sanctions&quot;)),1,
IF(AND(Entries_in_MDN_Request__c &gt; 0, Urgent__c),2,
IF(OR(Entries_in_MDN_Request__c = 0, ISBLANK(Entries_in_MDN_Request__c)),NULL,
3))))))))</formula>
    <label>SLA Business Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>