force-app/main/default/objects/E_Rate_All_Request__c/fields/SLA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due_Date__c</fullName>
    <label>SLA Due Date</label>
    <type>Date</type>
</CustomField>