force-app/main/default/objects/E_Rate_All_Request__c/fields/SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>SLA_Met__c</fullName>
    <formula>(SLA_Actioned_Date__c &gt;= 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA - Met</label>
    <type>Checkbox</type>
</CustomField>