force-app/main/default/objects/E_Rate_All_Request__c/fields/SLA_Met_Count__c.field-meta.xml
<CustomField>
    <fullName>SLA_Met_Count__c</fullName>
    <formula>IF(SLA_Met__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA - Met Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>