force-app/main/default/objects/E_Rate_All_Request__c/fields/SYSTEM__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM__c</fullName>
    <formula>TEXT(System_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SYSTEM</label>
    <type>Text</type>
</CustomField>