force-app/main/default/objects/E_Rate_All_Request__c/fields/System_ID__c.field-meta.xml
<CustomField>
    <fullName>System_ID__c</fullName>
    <label>System ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>