force-app/main/default/objects/E_Rate_All_Request__c/fields/Turnaround_Days__c.field-meta.xml
<CustomField>
    <fullName>Turnaround_Days__c</fullName>
    <label>Turnaround Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>