force-app/main/default/objects/E_Rate_All_Request__c/fields/UNIQUE_ID__c.field-meta.xml
<CustomField>
    <fullName>UNIQUE_ID__c</fullName>
    <formula>System_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNIQUE_ID</label>
    <type>Text</type>
</CustomField>