force-app/main/default/objects/E_Rate_All_Request__c/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes urgent MDN request</description>
    <label>Urgent</label>
    <type>Checkbox</type>
</CustomField>