force-app/main/default/objects/E_Rate_All_Request__c/recordTypes/System_Group.recordType-meta.xml
<RecordType>
    <fullName>System_Group</fullName>
    <active>true</active>
    <label>System Group</label>
</RecordType>