force-app/main/default/objects/E_Rate_All_Request__c/validationRules/If_Status_is_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Request_Status__c,&quot;Completed&quot;),ISPICKVAL(Request_Status__c,&quot;Previously Actioned&quot;)),ISBLANK(Date_Actioned_DD_MM_YYYY__c))</errorConditionFormula>
    <errorDisplayField>Date_Actioned_DD_MM_YYYY__c</errorDisplayField>
    <errorMessage>Please fill in the Date Actioned</errorMessage>
</ValidationRule>