force-app/main/default/objects/E_Rate_All_Request__c/validationRules/If_Status_is_In_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_In_Progress</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Request_Status__c,&quot;In Progress&quot;),ISBLANK(Date_Approved_DD_MM_YYYY__c))</errorConditionFormula>
    <errorDisplayField>Date_Approved_DD_MM_YYYY__c</errorDisplayField>
    <errorMessage>Please fill in the Date Approved</errorMessage>
</ValidationRule>