force-app/main/default/objects/E_Rate_All_Request__c/validationRules/Request_Type_is_Necessary.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Type_is_Necessary</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Request_Type__c))</errorConditionFormula>
    <errorDisplayField>Request_Type__c</errorDisplayField>
    <errorMessage>Please fill in the Request Type</errorMessage>
</ValidationRule>