force-app/main/default/objects/E_Rate_All_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MDN_Request__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Counterparty_Name__c</columns>
    <columns>Request_Reason__c</columns>
    <columns>Reason_Type__c</columns>
    <columns>System_ID__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Date_Approved_DD_MM_YYYY__c</columns>
    <columns>Date_Actioned_DD_MM_YYYY__c</columns>
    <columns>MDN_Requestor__c</columns>
    <columns>MDN_Submitter__c</columns>
    <columns>SLA_Due_Date__c</columns>
    <columns>Urgent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Not Applicable</value>
    </filters>
    <label>All</label>
</ListView>