force-app/main/default/objects/E_Rate_All_Request__c/listViews/All_Special.listView-meta.xml
<ListView>
    <fullName>All_Special</fullName>
    <columns>NAME</columns>
    <columns>MDN_Request__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Counterparty_Name__c</columns>
    <columns>Request_Reason__c</columns>
    <columns>System_Group__c</columns>
    <columns>System_ID__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Date_Approved_DD_MM_YYYY__c</columns>
    <columns>Date_Actioned_DD_MM_YYYY__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>E_Rate_All_Request__c.System_Group</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>ER-032888,ER-032887,ER-024331,ER-024330,ER-032810,ER-032777,ER-032685,ER-024155,ER-024085,ER-023979,ER-024146,ER-024071,ER-023831,ER-023744</value>
    </filters>
    <label>All - Special</label>
</ListView>